--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,10 +4,17 @@ body {
   color: #3f4850;
 }
 
+h1 {
+  font-size: 3.5em;
+  font-family: 'Coiny', cursive;
+  color: #3977a3;
+}
+
 h2 {
   font-size: 2em;
   margin: 52px 0 40px;
   text-transform: capitalize;
+  color: #275270;
 }
 
 ul {
@@ -29,16 +36,16 @@ a {
   outline: none;
   background-color: #438bbd;
   border: none;
-  padding: 0px 15px;
+  padding: 0px 20px;
   border-radius: 0 0.35em 0.35em 0;
   cursor: pointer;
 }
 
 input {
-  font-size: 1em;
+  font-size: 1.5em;
   width: 100%;
   background-color: #edeff0;
-  padding: 10px 15px;
+  padding: 13px 15px;
   border: 3px solid #d7dbdf;
   border-right: none;
   border-radius: 0.35em 0 0 0.35em;
